<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBg"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/title_tutorial"
        android:textColor="@color/secondaryText"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reviewTutorialScreensButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:paddingBottom="16dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:text="@string/text_review_tutorial_screens"
        android:textColor="@color/secondaryText"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/title_about"
        android:textColor="@color/secondaryText"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:paddingBottom="16dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:text="@string/title_version"
            android:textColor="@color/secondaryText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/versionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="16dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:textColor="@color/secondaryText"
            android:textStyle="bold"
            tools:text="v 1.0" />
    </LinearLayout>

    <TextView
        android:id="@+id/privacyPolicyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/white"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:paddingBottom="16dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:text="@string/title_privacy_policy"
        android:textColor="@color/secondaryText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/termsOfUseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:paddingBottom="16dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:text="@string/title_terms_of_use"
        android:textColor="@color/secondaryText"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/text_policlin_rights"
        android:textAlignment="center"
        android:textSize="12sp" />
</LinearLayout>