<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/delete_profile_subtitle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/delete_profile_information" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/delete_profile_deleted_modal" />


        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:background="@drawable/button_selector_secondary"
            android:text="@string/delete_profile_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/loading_container_delete"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>
</androidx.appcompat.widget.LinearLayoutCompat>